# ArcherChat

./: .env.local.example  .env.test.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  STAGE1.md  TECH_PLAN.md  TESTING_CHECKLIST.md  claude.md  cloudbuild.yaml  firestore.indexes.json  gitleaks.toml  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  server.test.js  tailwind.config.ts  test-config.js  test-secret.env.example  test-security.md
.github/: BRANCH_PROTECTION.md
archerchat/: attention.py  common.py  engine.py  eval_bundle.py  model.py  optimizer.py
docs/: ADDING_PROVIDERS.md  AGENTIC_ARCHITECTURE.md  CONTENT_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DESIGN.md  E2E_TESTING.md  FUTURE_IMPROVEMENTS.md  GITLEAKS_TROUBLESHOOTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_CONTEXT_ARCHITECTURE.md  MEMORY_SYSTEM_COMPLETE.md  MEMORY_SYSTEM_STATUS.md  PROGRESS_TRACKING.md  QUICK_START.md  README.md  SECURITY_ANALYSIS_TEST_AUTH.md  TAVILY_VS_GOOGLE_SEARCH_COMPARISON.md  TESTING.md  TESTING_CHECKLIST.md  TESTING_PLAN.md  WEB_SEARCH_DESIGN.md  WEB_SEARCH_IMPLEMENTATION_PLAN.md  WEB_SEARCH_RESEARCH.md
e2e/: basic-functionality.e2e.ts  chat-progress.e2e.ts  check-editor-json.e2e.ts  check-errors.e2e.ts  check-initial-content.e2e.ts  check-logs.e2e.ts  check-math-nodename.e2e.ts  debug-content.e2e.ts  debug-image-code.e2e.ts  discover-math-nodes.e2e.ts  math-rendering.e2e.ts  screenshot-full-page.e2e.ts  sidebar-rich-content.e2e.ts  test-dropdown-menus.e2e.ts  (+9 more)
(+143 files in other folders)
